--- a/index.css
+++ b/index.css
@@ -5,7 +5,10 @@ td{
 
 input{
     width: 100%;
-    border-radius: 30px;
+    border-radius: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
+    color: red;
+    font-style: italic;
+    font-weight: bold;
 }
