--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,8 @@ select{
 }
 
 #about{
-   margin-top: 15%;
-    bottom: 20px;
+   /*margin-top: 15%;*/
+   /* bottom: 20px;*/
     right: 20px;
     font-size: 16px;
     font-style: italic;
