--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,13 @@ select{
 }
 
 #about{
-   /*margin-top: 15%;*/
-   /* bottom: 20px;*/
+    right: 20px;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: bold;
+}
+
+#result{
     right: 20px;
     font-size: 16px;
     font-style: italic;
